# omniparser-sagemaker

./: README.md  pyproject.toml  requirements.txt
container/: Dockerfile  dockerd-entrypoint.py  inference.py
model/: download_weights.py
scripts/: build_and_push.sh  deploy.py  test_async_endpoint.py
