[project]
name = "omniparser-sagemaker"
version = "0.1.0"
description = "SageMaker async inference deployment for OmniParser v2"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.34.0",
    "sagemaker>=2.198.0",
    "torch",
    "easyocr",
    "torchvision",
    "supervision==0.18.0",
    "openai==1.3.5",
    "transformers",
    "ultralytics==8.3.70",
    "azure-identity",
    "numpy==1.26.4",
    "opencv-python",
    "opencv-python-headless",
    "gradio",
    "dill",
    "accelerate",
    "timm",
    "einops==0.8.0",
    "paddlepaddle",
    "paddleocr",
    "ruff==0.6.7",
    "pre-commit==3.8.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.23.6",
    "pyautogui==0.9.54",
    "streamlit>=1.38.0",
    "anthropic[bedrock,vertex]>=0.37.1",
    "jsonschema==4.22.0",
    "google-auth>=2,<3",
    "screeninfo",
    "uiautomation",
    "dashscope",
    "groq"
]
